--- a/index.html
+++ b/index.html
@@ -1,28 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<!-- meta tags, links to css, etc. -->
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- meta tags, links to css, etc. -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>Assignment 3</title>
+  <title>Assignment 3</title>
 
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-<link rel="stylesheet" href="assets/css/styles.css">
+  <!-- Bootstrap CSS -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
-<!-- visible content goes here -->
+  <!-- visible content goes here -->
+  <h1>dig245-a3</h1>
+  <a href="https://www.swissted.com/products/the-velvet-underground-at-maxs-kansas-city-1970#&gid=1&pid=1" target="_blank">original design</a>
+  <div class="container">
+    <div class="row">
+      <div class="col-5 m-0 p-0">
+        <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="50%" cy="50%" r="50%" fill="#cccccc" />
+        </svg>
+      </div>
+      <div class="col-7 m-0 p-0">
+        <svg viewBox="0 0 100 71" xmlns="http://www.w3.org/2000/svg">
+          <polygon points="0,0 0,71 100,71" style="fill:#009999;" />
+        </svg>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-5 m-0 p-0 bottom-circle">
+        <svg viewBox="0 0 100 100" class="img-fluid" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="50%" cy="50%" r="50%" fill="#ff3333" />
+        </svg>
+      </div>
+      <div class="col-7 mt-3 white-text">
+        <p>
+          held over for the entire summer
+          <br><br>
+          wednesday thru sunday / 11 pm & 1 am
+          <br>
+          june 24 thru august 28 1970
+          <br>
+          <br>
+          <br>
+        </p>
+        <h1 class="title">the velvet underground</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 m-0 p-0">
+        <p class="black-text">
+          upstairs at max's kansas city
+          <br>
+          213 park avenue south, new york city
+        </p>
+        <svg viewBox="0 0 100 50" class="img-fluid" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="50%" cy=0%" r="63%" fill="#ff9900" />
+        </svg>
+      </div>
+    </div>
+  </div>
 
 
-<h1>dig245-a3</h1>
 
-
-
-<!-- links to javascripts -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  <!-- links to javascripts -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
+
 </html>
