--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           213 park avenue south, new york city
         </p>
         <svg viewBox="0 0 100 50" class="img-fluid" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="50%" cy=0%" r="63%" fill="#ff9900" />
+          <circle cx="50%" cy="0%" r="63%" fill="#ff9900" />
         </svg>
       </div>
     </div>
